[gd_scene load_steps=8 format=3 uid="uid://cl4glsi76vapy"]

[ext_resource type="Script" uid="uid://bequ4vge6cubm" path="res://Scripts/player_overworld.gd" id="1_lvr5k"]
[ext_resource type="PackedScene" uid="uid://y38oa3aalokc" path="res://Scenes/Characters/enemy.tscn" id="3_uuhca"]
[ext_resource type="Material" uid="uid://tu87et11vjjo" path="res://Art/Materials/player_face.tres" id="4_f4tgq"]
[ext_resource type="Script" uid="uid://0d1yg6lwhubo" path="res://Scripts/camera.gd" id="6_fl7hq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kgvud"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3smsa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qqcod"]
radius = 0.55

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 0
script = ExtResource("1_lvr5k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kgvud")

[node name="Hitbox" type="Area3D" parent="." groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00301743, 0.0113287, 0.00144577)
shape = SubResource("CapsuleShape3D_3smsa")

[node name="CameraAnchor" type="Node3D" parent="."]

[node name="OverheadCamera" type="Camera3D" parent="CameraAnchor"]
transform = Transform3D(1, 0, 0, 0, 0.890943, 0.454115, 0, -0.454115, 0.890943, 0, 6.64065, 8.11491)
current = true
script = ExtResource("6_fl7hq")

[node name="FirstPersonCamera" type="Camera3D" parent="CameraAnchor"]
transform = Transform3D(1, 0, -6.3573e-08, 0, 1, 0, 6.3573e-08, 0, 1, 0, 1.984, 0)
fov = 37.5

[node name="RayCast3D" type="RayCast3D" parent="CameraAnchor/FirstPersonCamera"]
target_position = Vector3(0, 0, -50)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_qqcod")

[node name="EnemyModel" parent="." instance=ExtResource("3_uuhca")]

[node name="Cube" parent="EnemyModel/PersonAnimated/Armature/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("4_f4tgq")

[node name="RightHand" parent="EnemyModel/PersonAnimated/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.489906, 0.457233, 0.742247, -0.620313, 0.781069, -0.0717219, -0.61254, -0.425288, 0.666278, -47.9717, 37.4896, -234.309)

[node name="AK47" parent="EnemyModel/PersonAnimated/Armature/Skeleton3D/RightHand/Node3D" index="0"]
transform = Transform3D(-90.7142, 91.2149, 77.1413, -43.5925, 64.9069, -128.011, -111.223, -99.8349, -12.7447, 0, 0, 0)

[node name="LeftHand" parent="EnemyModel/PersonAnimated/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.0497794, -0.554518, -0.830682, 0.61663, 0.671333, -0.411193, 0.785678, -0.491755, 0.375351, -9.00934, 115.035, -241.999)

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="StepTimer" to="." method="_on_step_timer_timeout"]

[editable path="EnemyModel"]
[editable path="EnemyModel/PersonAnimated"]
